Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-34924

gtid_slave_pos table rows newer been deleted on non replica nodes (wsrep_gtid_mode = 1)

    XMLWordPrintable

Details

    Description

      To reproduce:

      Requirements:

      installed docker + docker compose + attached script

       
      docker compose up -d
      # wait until both cluster are up
       
      # create async replication
      ./init.sh  
       
      # create traffic (can be repeated multiple times)
      ./flood.sh
      
      

      Node 1 will be cleared after ~ 60 entries, but entries on node 2 and 3 persists
      and will be never deleted.

      Reproducable on 10.5.24, 10.5.25 and 10.5.26, but not on 10.6.19

      Attachments

        Issue Links

          Activity

            People

              sysprg Julius Goryavsky (Inactive)
              Richard Richard Stracke
              Votes:
              1 Vote for this issue
              Watchers:
              10 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 16.5d
                  16.5d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 14.5d Time Not Required
                  14.5d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.